--- a/style.css
+++ b/style.css
@@ -42,7 +42,8 @@ body {
 .file-uploader {
 	display: block;
 	text-align: center;
-	width: 1200px;
+	max-width: 1200px;
+	width: calc(100% - 16px);
 	height: 333px;
 	border: 8px solid #EDEDED;
 	border-radius: 10px;
@@ -73,7 +74,8 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 1200px;
+	max-width: 1200px;
+	width: calc(100% - 16px);
 	height: 325px;
 	border-radius: 10px;
 	border: 5px solid #DDDDDD;
@@ -118,6 +120,17 @@ body {
 	color: #49494A;
 }
 
+
+.error-popup-wrapper {
+	position: fixed;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+}
 
 .error-popup {
 	position: relative;
